Fix icon align in the header

--- a/css/main.css
+++ b/css/main.css
@@ -132,40 +132,39 @@ header nav ul li {
     text-align: left;
 }
 
+header nav .nav:before {
+    display: inline-block;
+    width: 1em;
+}
+
 header nav .index:before {
     font-family: 'foundation-icons';
     content: '\f169';
-    margin-right: 0.3em;
 }
 
 header nav .tags:before {
     font-family: 'foundation-icons';
     content: '\f19d';
-    margin-right: 0.3em;
 }
 
 header nav .github:before {
     font-family: 'foundation-icons';
     content: '\f1c9';
-    margin-right: 0.3em;
 }
 
 header nav .toys:before {
     font-family: 'foundation-icons';
     content: '\f15b';
-    margin-right: 0.3em;
 }
 
 header nav .about:before {
     font-family: 'foundation-icons';
     content: '\f1ee';
-    margin-right: 0.3em;
 }
 
 header nav .feed:before {
     font-family: 'foundation-icons';
     content: '\f1aa';
-    margin-right: 0.3em;
 }
 
 /* Articles */
